solved about issue on mobile and tablet breakpoint

--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -69,7 +69,6 @@
     .grid {
       grid-template-columns: 1fr;
       width: auto;
-      margin: 0 auto;
 
       img {
         border: 5px solid #fff;
@@ -80,7 +79,7 @@
     p {
       width: 80%;
       margin: 0 auto;
-      padding: 0px 0px 50px 0px;
+      padding: 0px 0px 25px 0px;
       text-align: center;
       font-size: 24px;
     }
